--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "eslint-config-next": "13.1.0",
     "next": "13.1.0",
     "next-sanity-image": "^5.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "stripe": "^11.5.0",
